--- a/src/Storefront/Web.config
+++ b/src/Storefront/Web.config
@@ -21,10 +21,10 @@
     <add key="aadGraphEndpoint" value="https://graph.windows.net"/>
 
     <!-- Enter your partner center onboarded AAD application ID here -->
-    <add key="partnerCenter.applicationId" value=""/>
+    <add key="partnerCenter.applicationId" value="3bb0c43d-3456-4d08-854b-e61261889958"/>
 
     <!-- Enter your partner center AAD tenant ID here -->
-    <add key="partnerCenter.AadTenantId" value=""/>
+    <add key="partnerCenter.AadTenantId" value="d90b3abb-7804-44a1-88bc-2b5cf254421f"/>
 
     <!-- The partner center API endpoint -->
     <add key="partnerCenter.apiEndPoint" value="https://api.partnercenter.microsoft.com"/>
