--- a/src/Storefront/Web.config
+++ b/src/Storefront/Web.config
@@ -21,13 +21,13 @@
     <add key="aadGraphEndpoint" value="https://graph.windows.net"/>
 
     <!-- Enter your partner center onboarded AAD application ID here -->
-    <add key="partnerCenter.applicationId" value="3bb0c43d-3456-4d08-854b-e61261889958"/>
+    <add key="partnerCenter.applicationId" value=""/>
 
     <!-- Enter your partner center AAD tenant ID here -->
-    <add key="partnerCenter.AadTenantId" value="d90b3abb-7804-44a1-88bc-2b5cf254421f"/>
+    <add key="partnerCenter.AadTenantId" value=""/>
 
     <!-- The partner center API endpoint -->
-    <add key="partnerCenter.apiEndPoint" value="https://api.partnercenter.microsoft.com"/>
+    <add key="partnerCenter.apiEndPoint" value=""/>
 
     <!-- The AAD client ID of the application running the web portal -->
     <add key="webPortal.clientId" value=""/>
